--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -88,7 +88,7 @@ stages:
     pool:
       vmImage: $(vmImageName)
 
-    environment: 'prod.$(k8sNamespaceForPR)'
+    environment: 'prod.default'
     strategy:
       runOnce:
         deploy:
